# janus-plugin-sfu

./: .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  Makefile  README.md  janus.plugin.sfu.cfg.example  rustfmt.toml
.github/workflows/: rust.yml
client/: demo.html  demo.js  package.json  squawkers-cli.js  squawkers.html  squawkers.js  test.html  tiny.html  tiny.js
demo/: retproxy.html  retproxy.js  sfu.html  sfu.js
docs/: api.md
scripts/: setup-and-run-janus.sh
src/: auth.rs  channel.rs  config.rs  entityids.rs  lib.rs  messages.rs  sessions.rs  subscriptions.rs  switchboard.rs  txid.rs  userid.rs
stuff/: setup-and-run-janus.sh
