[package]
name = "janus-plugin-sfu"
description = "Janus SFU for game networking."
edition = "2018"
version = "0.1.0"
authors = ["Marshall Polaris <marshall@pol.rs>"]
readme = "README.md"
repository = "https://github.com/mozilla/janus-plugin-sfu"
license = "MPL-2.0"
publish = false

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
janus-plugin = "0.12"
multimap = "0.8"
once_cell = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.13"
jsonwebtoken = "6.0"
lazy_static = "1.4.0"
num_cpus = "1.12.0"

[patch.crates-io]
janus-plugin-sys = { git = "https://github.com/Synantoo/janus-plugin-rs", branch = "feature/api-v15" }
janus-plugin = { git = "https://github.com/Synantoo/janus-plugin-rs", branch = "feature/api-v15" }
